# g3pylib

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  glasses3testlib.py  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements.txt  setup.cfg
.github/workflows/: build.yml  docs.yml  python-package.yml
examples/: accessrecordings.py  app.py  controleventkind.py  eventkinds.py  g3pycontroller_tkinter.py  rudimentarystreams.py  signalsubscription.py  streamgazertsp.py  streamrtsp.py  testusecase.py  zeroconfdiscovery.py  zeroconfinfo.py
examples/g3pycontroller/: __main__.py  eventkinds.py
src/g3pylib/: __init__.py  _utils.py  calibrate.py  exceptions.py  recorder.py  rudimentary.py  settings.py  streams.py  zeroconf.py
src/g3pylib/recordings/: __init__.py  recording.py
src/g3pylib/system/: __init__.py  battery.py
src/g3pylib/websocket/: __init__.py  exceptions.py
src/glasses3/: __init__.py  _utils.py  calibrate.py  g3typing.py  recorder.py  rudimentary.py  settings.py  streams.py  typing.py  utils.py  websocket.py  zeroconf.py
src/glasses3/recordings/: __init__.py  recording.py
src/glasses3/system/: __init__.py  battery.py
src/glasses3/websocket/: __init__.py  exceptions.py
src/glasses3/zeroconf/: __init__.py  exceptions.py
tests/: conftest.py  test_connect_to_glasses.py
tests/api_components/: test_calibrate.py  test_recorder.py  test_recording.py  test_recordings.py  test_rudimentary.py  test_settings.py  test_system.py
tests/api_components/system/: test_battery.py
