[metadata]
name = glasses3
version = 0.0.1
author = Markus Wesslén, Oskar Söderberg
author_email = mw2013@tobii.com, os2012@tobii.com
description = A Python wrapper for the Glasses3 API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobiipro/glasses3-python-lib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    websockets
    

[options.packages.find]
where = src